[package]
name = "fetchchromium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
indexmap = { version = "1.9.2", features = ["rayon"] }
indicatif = "0.17.2"
itertools = "0.10.5"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
ripunzip = { path = "../ripunzip" }
serde = { version = "1.0.147", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
url-escape = "0.1.1"
