# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "fetchchromium"
version = "0.3.0"
edition = "2021"
authors = ["Adrian Taylor <adetaylor@chromium.org>"]
license = "MIT OR Apache-2.0"
description = "A tool to fetch Chromium builds rapidly"
repository = "https://github.com/google/fetchchromium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = "4.0.29"
env_logger = "0.10.0"
glob-match = "0.2.1"
indexmap = { version = "1.9.2", features = ["rayon"] }
indicatif = "0.17.2"
itertools = "0.10.5"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
ripunzip = "1.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
url-escape = "0.1.1"

#[patch.crates-io]
#ripunzip = { path="../ripunzip" }
